<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lakeside sport festival</string>
    <string name="lakeside_sport_festival">LAKESIDE SPORT FESTIVAL</string>
    <string name="map">Map</string>
    <string name="prestataires">Prestataires</string>
    <string name="activites">Activités</string>
    <string name="resultats">Résultats</string>
    <string name="partez">3, 2, 1, PARTEZ !</string>
    <string name="evenement_commence">Notre évenement commence dans … </string>
    <string name="pq_evenement">POURQUOI CET EVENEMENT ? </string>
    <string name="pq_evenement_text">Venez participer au travers d’épreuves et récolter des fonds pour <b>l’APF</b> ! \n\n Natation, athlétisme, VTT et bien d’autres encore seront au rendez-vous pour vous faire passer un moment inoubliable entre amis, en famille ou en solitaire. \nAlors n’hésitez plus et ressortez vos baskets du placard pour venir vous challenger dans la bonne humeur !
        \n\nTous les bénéfices de cet évènement seront reversés à l’association APF pour aider à inclure les personnes à mobilité réduite dans le monde du sport.</string>
    <string name="apf_logo">APF_logo</string>
    <string name="cagnotte">Notre cagnotte</string>
    <string name="partenaires">Nos partenaires</string>


    <string name="page_accueil">Accueil</string>
    <string name="page_planning_jour_1">Mardi 15 août</string>
    <string name="page_planning_jour_2">Mercredi 16 août</string>
    <string name="page_club">Clubs</string>
    <string name="page_resto">Restaurants</string>
    <string name="page_detail_presta">Page présentation</string>

    <!-- =============================================================================================== Menu-->
    <string name="item_menu_1">Map</string>

    <string name="item_menu_2">Prestataires</string>
    <string name="sous_item_menu2_1">Restaurants</string>
    <string name="sous_item_menu2_2">Clubs</string>
    <string name="item_menu_3">Planning</string>

    <!-- =============================================================================================== Prestataire-->
    <string name="rubrique_a_propos">A propos</string>
    <string name="rubrique_commentaires">Commentaires</string>
    <string name="btn_presta_page">Page</string>
    <string name="list_commentaire_vide">Pas de commentaires</string>
    <string name="btn_presta_text">Site web</string>

    <!-- =============================================================================================== Planning-->
    <string name="btn_chgmt_jour">Changer de jour</string>
    <string name="maxDate">08/16/2023</string>
    <string name="minDate">08/15/2023</string>

    <!-- =============================================================================================== Map-->
    <!-- bottom_sheet_filtre    -->
    <string name="sheetbehavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="filtrer_par">Types de Stand </string>
    <string name="magasin">Magasins</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carte">Carte</string>
    <string name="description_logo_resto">resto</string>
    <string name="description_logo_sport">sport</string>
    <string name="description_logo_shop">magasin</string>
    <string name="description_logo_apf">apf</string>
    <string name="plus_de_d_tails_sur_ce_prestataires">Plus de détails sur ce prestataires.</string>
    <string name="details">Details</string>
</resources>